--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="static/style.css">
+
+  <!-- Leaflet CSS & JS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+  integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+  crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+  integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+  crossorigin=""></script>
 </head>
 
 <body>
@@ -19,8 +27,7 @@
             <p>Use the tools and charts below to explore historical election data for US presidents.</p>
         </div>
     </div>
-  <!-- <div class="wrapper">-->
-    
+      
     <div class="container">
         <div class="row">
             <div class="col-md-8 text-center">
@@ -32,7 +39,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row second-row">
             <div class="col-md-2">
               <div class="dropdown">
                 <h4>Select State</h4>
@@ -56,14 +63,14 @@
             <div class="col-md-5 text-center">
               <div class="panel panel-primary">
                 <div class="panel-heading">
-                  <h4 class="panel-title"><b>Data Table</b></h4>
+                  <h4 class="panel-title">Data Table</h4>
                 </div>
                 <div id="table" class="panel-body"></div>
               </div>
             </div>
 
             <div class="col-md-3 text-center">
-              <div id="pie" margin="0">Pie Chart</div>
+              <div id="pie">Pie Chart</div>
             </div>
             <div class="col-md-4">
               <div id="bar-other">Bar Chart - Other</div>
@@ -85,8 +92,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
 
   <!--Add js files here-->
-  <script src="data/1976-2016-president.csv"></script>
-  <script src="static/app.js"></script>
+  <script type="text/javascript" src="https://leafletjs.com/examples/choropleth/us-states.js"></script>
+  <script type="text/javascript" src="static/config.js"></script>
+  <script src="static/logic.js"></script>
+  
 
 </body>
 
