--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   <!-- Footer-->
   <div id="footer">
-    <p>Project 2 Group 1 &copy;June 2020 Bootcamp</p>
+    <p>Data Analytics Bootcamp - Project 2 Group 1 &copy;June 2020</p>
   </div>
 
   <!-- Scripts -->
