--- a/index.html
+++ b/index.html
@@ -109,8 +109,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
 
-  <!--Add js files here-->
+  <!-- Leaflet-Choropleth JavaScript -->
+  <script type="text/javascript" src="static/js/choropleth.js"></script>
   <script type="text/javascript" src="https://leafletjs.com/examples/choropleth/us-states.js"></script>
+
+  <!-- JS files-->
   <script type="text/javascript" src="static/config.js"></script>
   <script src="static/logic.js"></script>
   
